# arknights-storyteller

.github/workflows/: release.yml
arknights-story-reader/: index.html  package-lock.json  package.json
arknights-story-reader/scripts/: download-avatars.sh  split-fonts.py
arknights-story-reader/src/: App.tsx  index.css
arknights-story-reader/src-tauri/: Cargo.toml  tauri.conf.json
arknights-story-reader/src-tauri/assets/: char_map.json
arknights-story-reader/src-tauri/capabilities/: default.json
arknights-story-reader/src-tauri/src/: apk_updater.rs  asset_service.rs  character_table.rs  commands.rs  data_service.rs  image_sharer.rs  lib.rs  models.rs  parser.rs
arknights-story-reader/src-tauri/tests/: search_recall.rs
arknights-story-reader/src/components/: AssetImage.tsx  BottomNav.tsx  CharacterAvatar.tsx  CharactersPanel.tsx  ClueSetReader.tsx  ClueSetsPanel.tsx  HomePanel.tsx  ReaderSettings.tsx  SearchPanel.tsx  Settings.tsx  ShareImageDialog.tsx  StoryInsightsPanel.tsx  StoryList.tsx  StoryReader.tsx  StoryThumbnail.tsx  SyncDialog.tsx  ThemeToggle.tsx
arknights-story-reader/src/hooks/: useAppPreferences.tsx  useAppUpdater.ts  useAsset.ts  useAutoIndex.ts  useBackHandler.ts  useCharacterResolver.tsx  useDataSyncManager.ts  useEdgeSwipeBack.ts  useHighlights.ts  useImageSharer.ts  useLegacyStorageCleanup.ts  useReaderSettings.ts  useReadingProgress.ts  useSidePanel.ts  useStoryPreview.ts  useVirtualScroll.test.ts  useVirtualScroll.ts
arknights-story-reader/src/lib/: assetUrls.ts  clueCodecs.ts  logger.ts  segmentDigest.ts
(+7 files in other folders)
