[package]
name = "story-teller"
version = "1.10.52"
description = "Story Teller - A beautiful story reader app"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "story_teller_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[patch.crates-io]
tauri-plugin = { path = "patches/tauri-plugin" }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
walkdir = "2"
lazy_static = "1.4"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
zip = { version = "0.6.6", default-features = false, features = ["deflate"] }
rusqlite = { version = "0.30", features = ["bundled", "vtab"] }
unicode-normalization = "0.1"
jieba-rs = { version = "0.7", default-features = false, features = ["default-dict"] }

[target.'cfg(not(target_os = "android"))'.dependencies]
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
